# pycounts_vcm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_vcm/: __init__.py  datasets.py  plotting.py  pycounts_vcm.py
src/pycounts_vcm/data/: flatland.txt
tests/: test_pycounts_vcm.py
